# LuminousMusicStreamer

./: .env.example  .replit  Procfile  README.md  app.json  app.py  get_bot_info.py  main.py  pyproject.toml
bot/: __init__.py  config.py  helpers.py  music_player.py  simulated_player.py  ytdl.py
instance/: bot.db
static/css/: style.css
static/js/: main.js
templates/: about.html  base.html  history.html  index.html  search.html
